[package]
name = "btree-plus-store"
version = "0.1.0"
authors = ["Jakob Hain <jakobeha@fastmail.com>", "Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"
categories = ["data-structures", "memory-management"]
keywords = ["btree", "map", "set", "arena"]
description = "B-trees backed by a slab/arena to reduce allocations and increase locality"
repository = "https://github.com/Jakobeha/btree-plus-store"
documentation = "https://docs.rs/btree-plus-store"
# Benchmarks are in a separate workspace with criterion (see benches/README.md for more)
exclude = ["benches"]
license = "MIT/Apache-2.0"
readme = "README.md"
autobenches = false

# Benchmarks are additional tests, we run them with the criterion bencher replaced by stubs
[[test]]
name = "map_benchmarks"
path = "benches/map.rs"
harness = true

[[test]]
name = "set_benchmarks"
path = "benches/set.rs"
harness = true

[features]
default = []
dot = []

[dependencies]
smallvec = "1.10.0"
rustc-arena-modified = { version = "0.1.0", features = ["slab"] }

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }