[package]
name = "btree-store-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "benches"
path = "benches.rs"
harness = false

[profile.bench]
debug = true

[features]
default = ["bench"]
bench = ["criterion"]

[dependencies]
btree-forest-arena = { path = ".." }
criterion = { version = "0.5.1", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }